--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,5 @@
+//   include 'armeabi-v7a', 'arm64-v8a'
+
 plugins {
     id "com.android.application"
 }
@@ -15,20 +17,32 @@ ext {
     packageVariant = System.getenv("TERMUX_PACKAGE_VARIANT") ?: "apt-android-7" // Default: "apt-android-7"
 }
 
+
 android {
     buildFeatures {
         viewBinding true
     }
+    
+    
+    
     namespace "com.termux"
     compileSdk project.properties.compileSdkVersion.toInteger()
 //    compileSdk 34
-    ndkVersion '25.1.8937393'
+    ndkVersion '27.1.12297006'
     def appVersionName = System.getenv("TERMUX_APP_VERSION_NAME") ?: ""
     def apkVersionTag = System.getenv("TERMUX_APK_VERSION_TAG") ?: ""
     def splitAPKsForDebugBuilds = System.getenv("TERMUX_SPLIT_APKS_FOR_DEBUG_BUILDS") ?: "1"
     def splitAPKsForReleaseBuilds = System.getenv("TERMUX_SPLIT_APKS_FOR_RELEASE_BUILDS") ?: "0" // F-Droid does not support split APKs #1904
+    
+aaptOptions {
+        noCompress 'tar.xz'
+    }
+    
+    
 
     dependencies {
+ 
+
         implementation "androidx.annotation:annotation:1.3.0"
         implementation "androidx.core:core:1.6.0"
         implementation "androidx.drawerlayout:drawerlayout:1.1.1"
@@ -147,10 +161,10 @@ android {
         variant.outputs.all { output ->
             if (variant.buildType.name == "debug") {
                 def abi = output.getFilter(com.android.build.OutputFile.ABI)
-                outputFileName = new File("XoDos-app_" + (apkVersionTag ? apkVersionTag : project.ext.packageVariant + "-" + "debug") + "_" + (abi ? abi : "universal") + ".apk")
+                outputFileName = new File("XoDos_" + (apkVersionTag ? apkVersionTag : project.ext.packageVariant + "-" + "debug") + "_" + (abi ? abi : "universal") + ".apk")
             } else if (variant.buildType.name == "release") {
                 def abi = output.getFilter(com.android.build.OutputFile.ABI)
-                outputFileName = new File("XoDos-app_" + (apkVersionTag ? apkVersionTag : project.ext.packageVariant + "-" + "release") + "_" + (abi ? abi : "universal") + ".apk")
+                outputFileName = new File("XoDos_" + (apkVersionTag ? apkVersionTag : project.ext.packageVariant + "-" + "release") + "_" + (abi ? abi : "universal") + ".apk")
             }
         }
     }
@@ -158,6 +172,12 @@ android {
 }
 
 dependencies {
+    implementation 'org.apache.commons:commons-compress:1.23.0'
+    implementation 'com.github.luben:zstd-jni:1.5.2-3@aar'
+    implementation 'org.tukaani:xz:1.7'
+ //   implementation 'org.apache.commons:commons-compress:1.20'
+// implementation fileTree(dir: 'libs', include: ['*.jar'])
+    // Other dependencies...
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
