--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -4,9 +4,9 @@ on:
   workflow_dispatch:
     inputs:
       version_tag:
-        description: 'Version tag (5.3.0)'
+        description: 'Version tag (5.5.0)'
         required: true
-        default: '5.3.0'
+        default: '5.5.0'
 
 permissions:
   contents: write
@@ -31,11 +31,11 @@ jobs:
       - name: Download Main APK
         run: |
           pip install gdown
-          gdown "15bBGWXjNJ0ZG8FwTq76wzh3ZeGK3pszF" -O XoDos-${{ github.event.inputs.version_tag }}-full_arm64-v8a.apk || exit 1
+          gdown "1-UjOF8B_7ZZyUTBR5VQJPjlzmjx74c5n" -O XoDos-${{ github.event.inputs.version_tag }}-full_arm64-v8a.apk || exit 1
 
       - name: Download Additional File
         run: |
-          gdown "14EDDKYuuoTftTIKPJY2cy8-GxUXlDrjt" -O XoDos-ubuntu.tar.xz || exit 1
+          gdown "1--Nqu2iD7RdfLEsACqeGuc_75JHHSZOG" -O XoDos-debian-5.5.tar.xz || exit 1
 
       - name: Create Release with Both Files
         uses: softprops/action-gh-release@v1
@@ -46,7 +46,7 @@ jobs:
           name: XoDos ${{ github.event.inputs.version_tag }}
           files: |
             XoDos-${{ github.event.inputs.version_tag }}-full_arm64-v8a.apk
-            XoDos-ubuntu.tar.xz
+            XoDos-debian-5.5.tar.xz
           body: | 
             New XoDos release for arm64
             What's new?
