--- a/.github/workflows/init-submodules.yml
+++ b/.github/workflows/init-submodules.yml
@@ -32,7 +32,7 @@ jobs:
         run: |
           pwd
           mkdir -p termux-x11/src/main/cpp
-          git clone -b master-x11-submodule https://github.com/xodiosx/XoDos-test temprepo
+          git clone -b main https://github.com/xodiosx/XoDos-test temprepo
           cd temprepo
           ls
            
