--- a/.github/workflows/Upload.yml
+++ b/.github/workflows/Upload.yml
@@ -6,7 +6,7 @@ on:
       version_tag:
         description: 'Version tag (5.7.0)'
         required: true
-        default: '5.7.0'
+        default: '5.8.0'
 
 permissions:
   contents: write
@@ -31,11 +31,13 @@ jobs:
       - name: Download Main APK
         run: |
           pip install gdown
-          gdown "13WcI0cWLsiJCzArZBpbuxjue08_jl4Li" -O XoDos-${{ github.event.inputs.version_tag }}-full_arm64-v8a.apk || exit 1
+          gdown "15yMD68M7DS9hnkb3QhnMUKMQuomVGOpT" -O XoDos-${{ github.event.inputs.version_tag }}-full_arm64-v8a.apk || exit 1
 
       - name: Download Additional File
         run: |
-          ls
+          gdown "165l6GCGEGqE2hMDsMIfDUzTdwqkAWpKJ" -O XoDos-bionic-5.8.tar.xz || exit 1
+          gdown "16GJ4hgJ2VvoqUBNodWRlCOsm03ydOZ15" -O XoDos-glibc-5.8.tar.xz || exit 1
+
 
       - name: Create Release with Both Files
         uses: softprops/action-gh-release@v1
@@ -46,6 +48,8 @@ jobs:
           name: XoDos ${{ github.event.inputs.version_tag }}
           files: |
             XoDos-${{ github.event.inputs.version_tag }}-full_arm64-v8a.apk
+            XoDos-bionic-5.8.tar.xz
+            XoDos-glibc-5.8.tar.xz
             
           body: | 
             New XoDos release for arm64
