--- a/.github/workflows/Sub.yml
+++ b/.github/workflows/Sub.yml
@@ -1,4 +1,4 @@
-name: xUpdate Submodules
+name: xAdd Submodules
 
 on:
   workflow_dispatch:
@@ -7,7 +7,7 @@ permissions:
   contents: write   # allow workflow to push changes
 
 jobs:
-  update-submodules:
+  add-submodules:
     runs-on: ubuntu-latest
 
     steps:
@@ -15,19 +15,36 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          submodules: recursive
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Init, sync and update submodules
+      - name: Add submodules if not present
         run: |
+          git submodule add https://github.com/KhronosGroup/OpenXR-SDK.git termux-x11/src/main/cpp/OpenXR-SDK || true
+          git submodule add https://gitlab.com/bzip2/bzip2 termux-x11/src/main/cpp/bzip2 || true
+          git submodule add https://github.com/anholt/libepoxy termux-x11/src/main/cpp/libepoxy || true
+          git submodule add https://gitlab.freedesktop.org/xorg/lib/libfontenc termux-x11/src/main/cpp/libfontenc || true
+          git submodule add https://github.com/alisw/libtirpc termux-x11/src/main/cpp/libtirpc || true
+          git submodule add https://gitlab.freedesktop.org/xorg/lib/libx11 termux-x11/src/main/cpp/libx11 || true
+          git submodule add https://gitlab.freedesktop.org/xorg/lib/libxau termux-x11/src/main/cpp/libxau || true
+          git submodule add https://gitlab.freedesktop.org/xorg/lib/libxcvt termux-x11/src/main/cpp/libxcvt || true
+          git submodule add https://gitlab.freedesktop.org/xorg/lib/libxdmcp termux-x11/src/main/cpp/libxdmcp || true
+          git submodule add https://gitlab.freedesktop.org/xorg/lib/libxfont termux-x11/src/main/cpp/libxfont || true
+          git submodule add https://gitlab.freedesktop.org/xorg/lib/libxkbfile termux-x11/src/main/cpp/libxkbfile || true
+          git submodule add https://gitlab.freedesktop.org/xorg/lib/libxshmfence termux-x11/src/main/cpp/libxshmfence || true
+          git submodule add https://gitlab.freedesktop.org/xorg/lib/libxtrans termux-x11/src/main/cpp/libxtrans || true
+          git submodule add https://gitlab.freedesktop.org/pixman/pixman termux-x11/src/main/cpp/pixman || true
+          git submodule add https://gitlab.freedesktop.org/xorg/app/xkbcomp termux-x11/src/main/cpp/xkbcomp || true
+          git submodule add https://gitlab.freedesktop.org/xorg/proto/xorgproto termux-x11/src/main/cpp/xorgproto || true
+          git submodule add https://gitlab.freedesktop.org/xorg/xserver termux-x11/src/main/cpp/xserver || true
+
           git submodule sync --recursive
-          git submodule update --init --recursive --remote
+          git submodule update --init --recursive
 
       - name: Commit and push submodules to main
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-          git add .
-          git commit -m "5.9.0" || echo "No changes to commit"
+          git add .gitmodules termux-x11/src/main/cpp/* || true
+          git commit -m "5.9.0 - add/update submodules" || echo "No changes to commit"
           git push origin HEAD:main
