--- a/.github/workflows/attach_debug_apks_to_release.yml
+++ b/.github/workflows/attach_debug_apks_to_release.yml
@@ -53,12 +53,12 @@ jobs:
 
           echo "Found XoDos APKs:"
           ls -la ./app/build/outputs/apk/debug/*.apk
-          if ls ./app/build/outputs/apk/debug/*universal.apk 1> /dev/null 2>&1; then
-            echo "Universal APK found"
-          else
-            echo "::error::Universal APK not found!"
+          #if ls ./app/build/outputs/apk/debug/*universal.apk 1> /dev/null 2>&1; then
+            #echo "Universal APK found"
+          #else
+            #echo "::error::Universal APK not found!"
             #exit 1
-          fi
+         # fi
 
       - name: Upload APKs to GitHub artifact
         uses: actions/upload-artifact@v4
@@ -95,10 +95,10 @@ jobs:
           find artifacts -type f -name '*.apk' -print
           
           APK_COUNT=$(find artifacts -type f -name '*.apk' | wc -l)
-          if [ "$APK_COUNT" -eq 0 ]; then
-            echo "::error::No APK files found in artifacts!"
+          #if [ "$APK_COUNT" -eq 0 ]; then
+            #echo "::error::No APK files found in artifacts!"
             #exit 1
-          fi
+          #fi
           echo "Found $APK_COUNT APK files"
 
       - name: Create Release and Upload APKs
